tests/__snapshots__/api-toBeUndefined.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toBeUndefined: stderr 1`] = `
"Error: The source type is 'string'.

   7 |   expect(returnsUndefined()).type.toBeUndefined();
   8 | 
>  9 |   expect(returnsString()).type.toBeUndefined();
     |                                ^
  10 | });
  11 | 
  12 | test("is NOT undefined?", () => {

       at ./__typetests__/toBeUndefined.tst.ts:9:32 ❭ is undefined?

Error: The source type is 'undefined'.

  13 |   expect(returnsString()).type.not.toBeUndefined();
  14 | 
> 15 |   expect(returnsUndefined()).type.not.toBeUndefined();
     |                                       ^
  16 | });
  17 | 

       at ./__typetests__/toBeUndefined.tst.ts:15:39 ❭ is NOT undefined?

"
`;

exports[`toBeUndefined: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

fail ./__typetests__/toBeUndefined.tst.ts
  × is undefined?
  × is NOT undefined?

Targets:    1 failed, 1 total
Test files: 1 failed, 1 total
Tests:      2 failed, 2 total
Assertions: 2 failed, 2 passed, 4 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
